crates/willikins-journal/tests/it/snapshots/it__schema_generation__run_record_schema_generates.snap
---
source: crates/willikins-journal/tests/it/schema_generation.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "RunRecord",
  "description": "A run of a plan, replayed from its `RunStarted`, `NodeStarted`,\n`NodeFinished`, and `RunFinished` events.",
  "type": "object",
  "properties": {
    "blocked": {
      "description": "Every gate this run found blocked, from [`Outcome::Blocked`]. Empty\nfor a run that never reports that outcome --\n`#[serde(skip_serializing_if = \"Vec::is_empty\")]` so a `RunRecord`\nwith none serializes byte-identically to before this field existed\n(task G2, decision (j)).\n\n`default` as well, though nothing deserializes this type: the JSON\nSchema the MCP server publishes as a tool's `outputSchema` is built for\nthe deserialize contract, which lists every field without a serde\ndefault as `required` -- and a skipped field that is `required`\nmakes every result without it fail its own published schema\n(`crates/willikins-server/tests/mcp_output_schema_conformance.rs`).",
      "type": "array",
      "items": {
        "$ref": "#/$defs/BlockedGate"
      }
    },
    "error": {
      "description": "The failure the run ended with, if any.",
      "anyOf": [
        {
          "$ref": "#/$defs/RedactedApplyError"
        },
        {
          "type": "null"
        }
      ]
    },
    "finished_at": {
      "description": "When it finished, if it has.",
      "anyOf": [
        {
          "$ref": "#/$defs/Timestamp"
        },
        {
          "type": "null"
        }
      ]
    },
    "next_step": {
      "description": "What the operator should do next, present exactly when `state` is\n[`RunState::Blocked`]: `\"re-run this document once every blocked\ngate's need is met\"`. `#[serde(skip_serializing_if = \"Option::is_none\")]`\nfor the same byte-identical-when-absent reason as `blocked`.",
      "type": [
        "string",
        "null"
      ]
    },
    "nodes": {
      "description": "Every node instance the run reached, in the applied plan's own\norder when that plan's `PlanRecorded` event is in this journal\n(with [`NodeStatus::NotRun`] filling in any instance the run never\nstarted); in the order `NodeFinished` events arrived otherwise.",
      "type": "array",
      "items": {
        "$ref": "#/$defs/RunNode"
      }
    },
    "outputs": {
      "description": "Every workflow output's resolved value. Empty until (and unless)\nthe run's `RunFinished` reports [`Outcome::Succeeded`] or\n[`Outcome::Blocked`].",
      "$ref": "#/$defs/RedactedResolvedOutputs"
    },
    "plan_id": {
      "description": "The plan it applied.",
      "$ref": "#/$defs/PlanId"
    },
    "principal": {
      "description": "Who started it.",
      "$ref": "#/$defs/PrincipalId"
    },
    "run_id": {
      "description": "This run's id.",
      "$ref": "#/$defs/RunId"
    },
    "started_at": {
      "description": "When it started.",
      "$ref": "#/$defs/Timestamp"
    },
    "state": {
      "description": "Its current state.",
      "$ref": "#/$defs/RunState"
    }
  },
  "required": [
    "run_id",
    "plan_id",
    "principal",
    "started_at",
    "state",
    "nodes",
    "outputs"
  ],
  "$defs": {
    "BlockedGate": {
      "description": "One [`Action::Blocked`] gate in a [`Plan`]: what it needs, how to make it\ntrue, what it was checking, and every node it holds back.\n\nPlain data — never a [`Value`] — so it holds no secret by construction:\n`need` and `how` come straight from the gate's own `&'static str`s, and\n`subject` is rendered text, never a live value. See\n[`crate::tool::Gate`]'s own doc.\n\nDerives [`serde::Deserialize`] as well as `Serialize` (added by task G2):\n`willikins-journal`'s `Event::RunFinished` stores a run's own\n`Vec<BlockedGate>` directly rather than through `Redacted`, since none\nof its fields is ever a [`Value`] — the same reasoning that lets\n[`crate::apply::NodeStatus`] round-trip untouched.",
      "type": "object",
      "properties": {
        "awaiting_inputs": {
          "description": "Every workflow input, bound directly to one of this node's ports,\nwhose value is still [`crate::value::ValueState::Unknown`] — G3: an\nunsupplied [`willikins_types::OperatorAcknowledgement`] input, so the\nreport can say which `--input name=done` would satisfy this gate. In\nport declaration order, deduplicated by name. Empty for a gate that\nobserves provider state rather than an operator acknowledgement.\n\n`#[serde(default)]` (2026-09-29 addendum, milestone 3e's finding 1\nlast sentence): this field arrived after `BlockedGate` already\nderived `Deserialize` (task G2), so a `RunFinished { Blocked }` line\nwritten between G2 and G3 carries no `awaiting_inputs` key at all;\nwithout a default, replaying it fails outright rather than reading\nit as empty, which is the same forward-compatibility gap `Plan`'s\nown fields already close with `#[serde(default,\nskip_serializing_if = \"Vec::is_empty\")]`. Serialization is\nunaffected: the field is still always written, so the wire shape\nthis binary produces does not change.",
          "type": "array",
          "default": [],
          "items": {
            "$ref": "#/$defs/InputName"
          }
        },
        "holds_back": {
          "description": "Every node this gate holds back — [`Action::Skip`] because it binds\nthis gate directly or transitively — in plan order, deduplicated by\nname.",
          "type": "array",
          "items": {
            "$ref": "#/$defs/NodeName"
          }
        },
        "how": {
          "description": "The gate's own [`crate::tool::Gate::how`].",
          "type": "string"
        },
        "instance": {
          "description": "The `for_each` instance key, if any; `None` for a node with no\n`for_each`.",
          "type": [
            "string",
            "null"
          ]
        },
        "need": {
          "description": "The gate's own [`crate::tool::Gate::need`].",
          "type": "string"
        },
        "node": {
          "description": "The blocked node.",
          "$ref": "#/$defs/NodeName"
        },
        "subject": {
          "description": "Each of the gate's [`crate::tool::Gate::subject`] ports, rendered\nfrom the bound input that reached it, in declared order.",
          "type": "array",
          "items": {
            "type": "array",
            "maxItems": 2,
            "minItems": 2,
            "prefixItems": [
              {
                "$ref": "#/$defs/PortName"
              },
              {
                "type": "string"
              }
            ]
          }
        },
        "tool": {
          "description": "The gate tool this node calls.",
          "$ref": "#/$defs/ToolName"
        }
      },
      "required": [
        "node",
        "tool",
        "need",
        "how",
        "subject",
        "holds_back"
      ]
    },
    "InputName": {
      "type": "string",
      "pattern": "^[a-z][a-z0-9_]*(/[a-z][a-z0-9_]*)*$"
    },
    "NodeName": {
      "type": "string",
      "pattern": "^[a-z][a-z0-9_]*(/[a-z][a-z0-9_]*)*$"
    },
    "NodeStatus": {
      "description": "What happened to one planned node instance during [`apply`].\n\nDerives [`serde::Deserialize`] as well as `Serialize`: unlike most\ntypes in this module, a `NodeStatus` never holds a [`crate::value::Value`]\n(its only payload, [`ToolError`], is a plain message with no secret\nobligation of its own — see that type's doc), so round-tripping it\nthrough JSON cannot resurrect anything redaction hid. `willikins-journal`\nrelies on this to store a `NodeFinished` event's `status` field\nuntouched, rather than behind its `Redacted` wrapper the way `outputs`\n(which does carry [`Value`]s) must be.",
      "oneOf": [
        {
          "description": "A pure tool computed its outputs; there was nothing to create or\nleave alone.",
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "const": "computed"
            }
          },
          "required": [
            "kind"
          ]
        },
        {
          "description": "`ensure` reported [`Ensured::changed`] `true`.",
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "const": "created"
            }
          },
          "required": [
            "kind"
          ]
        },
        {
          "description": "`ensure` reported [`Ensured::changed`] `false`.",
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "const": "unchanged"
            }
          },
          "required": [
            "kind"
          ]
        },
        {
          "description": "A required input was [`crate::value::ValueState::Unknown`] and the\nplanned action was [`Action::NoOp`]: the resource already matches,\nby the plan's own observation, and nothing was called.",
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "const": "converged"
            }
          },
          "required": [
            "kind"
          ]
        },
        {
          "description": "`ensure` returned an error.",
          "type": "object",
          "properties": {
            "error": {
              "description": "The failure `ensure` reported.",
              "$ref": "#/$defs/ToolError"
            },
            "kind": {
              "type": "string",
              "const": "failed"
            }
          },
          "required": [
            "kind",
            "error"
          ]
        },
        {
          "description": "This instance's own planned [`Action`] was [`Action::Blocked`]: a\n[`crate::tool::Gate`] read [`crate::tool::Observation::Absent`]. No\ntool was called; the operator must act and the run must be\nre-planned. See decision (j),\n`docs/plans/2026-09-27-milestone-3e-new-ios-app.md`.",
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "const": "blocked"
            }
          },
          "required": [
            "kind"
          ]
        },
        {
          "description": "This instance's own planned [`Action`] was [`Action::Skip`]: it\nbinds a [`Self::Blocked`] or [`Self::Skipped`] node, directly or\ntransitively, so it was never read or called. Distinct from\n[`Self::NotRun`], which means the *run itself* stopped before\nreaching this instance — a `Skipped` instance was reached, and the\nrest of the run continued past it.",
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "const": "skipped"
            }
          },
          "required": [
            "kind"
          ]
        },
        {
          "description": "This instance was never attempted: an earlier instance in the same\nrun failed, and the run stopped there.",
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "const": "not_run"
            }
          },
          "required": [
            "kind"
          ]
        }
      ]
    },
    "PlanId": {
      "type": "string",
      "format": "uuid"
    },
    "PortName": {
      "type": "string",
      "pattern": "^[a-z][a-z0-9_]*$"
    },
    "PrincipalId": {
      "type": "string",
      "pattern": "^[A-Za-z0-9][A-Za-z0-9._@-]{0,127}$"
    },
    "RedactedApplyError": {},
    "RedactedOutputs": {},
    "RedactedResolvedOutputs": {},
    "RunId": {
      "type": "string",
      "format": "uuid"
    },
    "RunNode": {
      "description": "One node instance's outcome within a [`RunRecord`], folded from a\n[`Event::NodeFinished`] event -- or synthesized as\n[`NodeStatus::NotRun`] for a planned instance the run never reached,\nwhen the plan is known (see [`RunRecord::nodes`]'s own doc).",
      "type": "object",
      "properties": {
        "instance": {
          "description": "Its `for_each` instance key, if any.",
          "type": [
            "string",
            "null"
          ]
        },
        "node": {
          "description": "The node.",
          "$ref": "#/$defs/NodeName"
        },
        "outputs": {
          "description": "This instance's final outputs.",
          "$ref": "#/$defs/RedactedOutputs"
        },
        "status": {
          "description": "What happened.",
          "$ref": "#/$defs/NodeStatus"
        }
      },
      "required": [
        "node",
        "status",
        "outputs"
      ]
    },
    "RunState": {
      "description": "Whether a run is still going, or how it ended.",
      "oneOf": [
        {
          "description": "Started; no `RunFinished` seen yet (including a run whose process\ndied mid-way, which looks the same from the journal's own point of\nview -- it has no way to distinguish \"still running\" from \"will\nnever finish\").",
          "type": "string",
          "const": "running"
        },
        {
          "description": "Finished successfully, with no gate blocked.",
          "type": "string",
          "const": "succeeded"
        },
        {
          "description": "Finished with no tool failure, but at least one gate blocked (task\nG2, decision (j)): every node not downstream of it ran. See\n[`RunRecord::blocked`]/[`RunRecord::next_step`].",
          "type": "string",
          "const": "blocked"
        },
        {
          "description": "Finished with a failure.",
          "type": "string",
          "const": "failed"
        }
      ]
    },
    "Timestamp": {
      "type": "string",
      "format": "date-time"
    },
    "ToolError": {
      "description": "A tool's failure to `read` or `ensure`.\n\nNever includes an input value: an implementation must build `message`\nfrom the tool's own state and provider response, not from the\n[`Inputs`] it was given, so this type carries no obligation for callers\nto redact it themselves.",
      "type": "object",
      "properties": {
        "kind": {
          "description": "The kind of failure.",
          "$ref": "#/$defs/ToolErrorKind"
        },
        "message": {
          "description": "A human-readable explanation. Never a secret value.",
          "type": "string"
        }
      },
      "required": [
        "kind",
        "message"
      ]
    },
    "ToolErrorKind": {
      "description": "The kind of failure a [`Tool`] reported.",
      "oneOf": [
        {
          "description": "The resource `ensure` was asked to act on does not exist.",
          "type": "string",
          "const": "NotFound"
        },
        {
          "description": "The resource exists but not in the state the tool was asked to\nbring it to, and the tool will not overwrite it.",
          "type": "string",
          "const": "Conflict"
        },
        {
          "description": "The underlying provider reported a failure.",
          "type": "string",
          "const": "Provider"
        },
        {
          "description": "The tool's inputs are not valid, independent of any provider.",
          "type": "string",
          "const": "Invalid"
        }
      ]
    },
    "ToolName": {
      "type": "string",
      "pattern": "^[a-z][a-z0-9_]*(\\.[a-z][a-z0-9_]*)*$"
    }
  }
}
